--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my-app",
   "version": "1.0.0",
   "description": "App created with React, Webpack, Bootstrap, Font Awesome and more...",
-  "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode=development --stats-error-details --open --live-reload",
     "build": "webpack --mode production --stats-error-details && echo \"===> Build finished!\"",
@@ -39,6 +38,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
